# Flask-example

./: example.py  hello.py  pyproject.toml
templates/: index.html
templates/courses/: index.html  searcher.html  view.html
templates/users/: index.html  show.html
